syntax = "proto2";
package rpc;
option go_package = "initialthree/protocol/ss/rpc";

import  "cs/proto/message/team.proto";
import  "cs/proto/message/errerror.proto";

message teamCreate_req {
    required message.TeamPlayer player = 1;
    required message.TeamTarget target = 2;
}

message teamCreate_resp {
    required message.ErrCode errCode = 1;
    required uint32  teamID = 2;
}
